FIX: Removed redundant code and added additional styles to light/dark mode switch.

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -29,7 +29,7 @@ button {
     color: black;  
 }
 
-.light-mode h2, .lightmode h6 {
+.light-mode h2, .light-mode h4, .lightmode h6 {
     color: black;
 }
 
@@ -43,12 +43,21 @@ button {
     box-shadow: 0px 0px 2.5px rgba(0, 10, 10, 0.25);
 }
 
+.light-mode profile {
+    background-color: #ffffff;
+    box-shadow: 0px 0px 2.5px rgba(0, 10, 10, 0.25);
+}
+
 .dark-mode, .dark-mode .headerText {
     background-color: #1a1919;
     color: #ffffff;  
 }
 
-.dark-mode h2, .dark-mode h6 {
+.dark-mode .budgetComparison {
+    background-color: #1a1919;
+}
+
+.dark-mode h2, .dark-mode h4, .dark-mode h6 {
     color: #ffffff
 }
 
@@ -66,12 +75,24 @@ button {
     box-shadow: 0px 0px 2.5px rgba(255, 255, 255, .9);
 }
 
+.dark-mode .profile {
+    background-color: #1a1919;
+    box-shadow: 0px 0px 2.5px rgba(255, 255, 255, 0.9);
+}
+
 .switchButton {
+    display: flex;
+    align-items: center;
     position: fixed;
     margin-top: 5px;
-    right: 5%;
+    padding-left: 6px;
+    right: 10%;
     border-radius: 10px;
     font-size: 1rem;
+}
+
+.bulbIcon {
+    margin-left: 5px;
 }
 
 .light-mode .switchButton {
@@ -106,7 +127,7 @@ button {
     width: 100%;
     align-items: center;
     margin: 0 auto;
-    z-index: 1;
+    z-index: 2;
 }
 
 .navBar {
@@ -162,7 +183,7 @@ button {
     width: 100%;
     height: 60px;
     align-items: center;
-    z-index: 1;
+    z-index: 2;
 }
 
 .progressBar {
@@ -172,16 +193,16 @@ button {
     color: #ecb7db;
 }
 
+// Main Content //
+
 .contentContainer {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 110px;
+    margin-top: 115px;
     margin-bottom: 80px;
 }
-
-// Main Content //
 
 .spinner-div {
     height: 100vh;
@@ -209,6 +230,7 @@ button {
     position: fixed;
     top: 60px;
     padding-top: 10px;
+    z-index: 1;
 }
 
 .headerText .tooltipHeader {
@@ -271,7 +293,7 @@ h6 {
     width: 60%;
     height: 500px;
     padding: 20px 0 0 0;
-    margin: 50px auto;
+    margin-top: -5px;
     justify-content: space-between;
 }
 
